fix(table-advanced): fix text color for dark mode, add title attribute for cell and header (#820)

--- a/web-components/src/components/table-advanced/scss/settings.scss
+++ b/web-components/src/components/table-advanced/scss/settings.scss
@@ -10,5 +10,5 @@ $advanced-table-overlay-position: rem-calc(6);
 $advanced-table-header-sticky-indent: rem-calc(1);
 $advanced-table-resize-width: rem-calc(4);
 $advanced-table-collapse-btn: rem-calc(20);
-$advansed-table-filter-btn: rem-calc(24);
+$advanced-table-filter-btn: rem-calc(24);
 $advanced-table-filter-height: rem-calc(14);
